Fixed hr problem on home page with horizontal screen overflow, causing app width to be too large

--- a/front-end/src/pages/Home.scss
+++ b/front-end/src/pages/Home.scss
@@ -90,15 +90,10 @@
     &__startButton:hover {
       background-color: $dim_snow_white;
     }
-
-    hr {
-        width: 100%;
-    }
   
     &__nextPage {
         margin-top: 20px;
         color: $snow_white;
-        // height: 80vh;
         display: inline-block;
         text-align: center;
         
